Alignment fixes.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,6 +45,7 @@ html, body {
   width: 100%;
   font-family: var(--main-font-family);
   font-size: var(--main-font-size);
+  overflow: hidden;
 }
 
 #app-container, .app {
@@ -361,6 +362,10 @@ html, body {
   display: inline-block
 }
 
+.file-browser .entries .icon .fas {
+  vertical-align: -1px;
+}
+
 .file-browser .entries .icon .image-icon {
   vertical-align: middle;
   width: 16px;
@@ -390,7 +395,7 @@ html, body {
 }
 
 .player-bar {
-  flex: 0 0 80px;
+  flex: 0 0 85px;
   padding: 5px 15px;
   -webkit-user-select: none;
   display: flex;
@@ -401,12 +406,15 @@ html, body {
   flex: 1;
   white-space: nowrap;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0;
 }
 
 .current-song-title,
 .current-song-artist {
-  height: 30px;
-  line-height: 30px;
+  flex: 1;
+  line-height: 25px;
 }
 
 .current-song-title .image-icon {
@@ -457,6 +465,7 @@ html, body {
 }
 
 .player-controls-buttons {
+  flex: 1;
   display: flex;
   flex-direction: row;
 }
@@ -577,37 +586,11 @@ html, body {
   100% { background-position: 0% 50%; }
 }
 
-/* .slider {
-
-}
-
-.slider .handle {
-  background: #FFF;
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
-  background: linear-gradient(180deg, #3f3f3f, #2f2f2f);
-  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.3);
-  border: 1px solid #000;
-  cursor: pointer;
-  margin-top: -4px;
-}
-
-.slider.disabled .handle {
-  display: none;
-}
-
-.slider .bar-0 {
-  background: #4a81d7;
-  height: 100%;
-  border-radius: 4px;
-} */
-
 .seek-bar {
   display: flex;
   flex-direction: row;
   align-items: center;
-  flex: 0 0 20px;
+  flex: 0 0 25px;
 }
 
 .seek-bar .current-time,
